--- a/index.html
+++ b/index.html
@@ -570,26 +570,26 @@
                             </div>
                             <div class="testimonial-carousel2 owl-carousel owl-theme mt-n4" data-slider-id="1">
                                 <div class="bg-white pt-2-9 p-1-9 border-radius-10 inner-text">
-                                    <p class="mb-1-6 lead">It fits our needs perfectly. I could probably go into sales for you. Really good. I am so pleased with this product. It really saves me time and effort.</p>
-                                    <h6 class="mb-0">Ilene Dorsey</h6>
+                                    <p class="mb-1-6 lead">Egy Solutions has transformed our facility management. Their reliability and attention to detail are unmatched. Highly recommended</p>
+                                    <h6 class="mb-0">Ahmed Alaa</h6>
                                     <span class="small">Developer</span>
                                 </div>
 
                                 <div class="bg-white pt-2-9 p-1-9 border-radius-10 inner-text">
-                                    <p class="mb-1-6 lead">I will definitely be ordering again! It's all good. We've seen amazing results already. Cctv camera should be nominated for service of the year.</p>
-                                    <h6 class="mb-0">Steven Bartley</h6>
+                                    <p class="mb-1-6 lead">For over three years, Egy Solutions has been our go-to partner. Their team is responsive and always delivers top-notch service.</p>
+                                    <h6 class="mb-0">Mohamed Saif</h6>
                                     <span class="small">Designer</span>
                                 </div>
 
                                 <div class="bg-white pt-2-9 p-1-9 border-radius-10 inner-text">
-                                    <p class="mb-1-6 lead">Cctv camera is worth much more than I paid. Thanks guys, keep up the good work! We're loving it. I will recommend you to my colleagues.</p>
-                                    <h6 class="mb-0">Rosemary Frye</h6>
+                                    <p class="mb-1-6 lead">Egy Solutions enhanced our corporate campus with their sustainable landscaping and maintenance. We couldn’t be happier with the results.</p>
+                                    <h6 class="mb-0">Mohamed Mahmoud</h6>
                                     <span class="small">Manager</span>
                                 </div>
 
                                 <div class="bg-white pt-2-9 p-1-9 border-radius-10 inner-text">
-                                    <p class="mb-1-6 lead">Thank you for making it painless, pleasant and most of all hassle free! It's incredible. I could probably go into sales for you.</p>
-                                    <h6 class="mb-0">Abigail Gunn</h6>
+                                    <p class="mb-1-6 lead">Choosing Egy Solutions was a game-changer. Their proactive approach has significantly improved our facilities. We’re thrilled with the partnership.</p>
+                                    <h6 class="mb-0">Ahmed Salah</h6>
                                     <span class="small">Freelancer</span>
                                 </div>
 
