--- a/service1.html
+++ b/service1.html
@@ -179,7 +179,7 @@
                         <div>
                             <div class="section-title mb-1-6 mb-sm-1-9">
                                 <span>Services</span>
-                                <h2 class="mb-0">Cleaning Services</h2>
+                                <h2 class="mb-0">HouseKeeping</h2>
                             </div>
                             <p class="w-xxl-95">We provide a comprehensive range of customized cleaning solutions tailored to meet the specific needs of your facility, ensuring it remains a clean, healthy, and safe environment for all employees. Our services encompass deep cleaning of all areas, including offices, conference rooms, restrooms, and common areas. We specialize in the thorough cleaning of kitchens, ensuring that countertops, appliances, and flooring are spotless and hygienic. Our carpet and upholstery cleaning services effectively remove dirt, stains, and allergens, revitalizing the appearance and comfort of your furnishings. We also offer curtain cleaning to eliminate dust and allergens, as well as expert furniture stain removal to preserve the quality and aesthetics of your interiors. Additionally, our water damage restoration services address leaks and flooding, restoring affected areas to their original condition and preventing further damage. Our team is equipped with advanced cleaning tools and eco-friendly products to deliver the highest standard of cleanliness and safety.</p>
                             <!-- <ul class="list-style3 pb-1-9 border-bottom mb-1-9 mb-md-2-9 list-unstyled">
