--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
 
                                 <div class="bg-white pt-2-9 p-1-9 border-radius-10 inner-text">
                                     <p class="mb-1-6 lead">Cctv camera security should be nominated for service of the year. It's incredible. If you aren't sure, always go for cctv camera security.</p>
-                                    <h6 class="mb-0">Archie Cousens</h6>
+                                    <h6 class="mb-0">Osama</h6>
                                     <span class="small">Developer</span>
                                 </div>
                             </div>
