--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from acoworkhtml.websitelayout.net/index-03.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 19 Aug 2024 10:55:04 GMT -->
+
 <head>
     <!-- metas -->
     <meta charset="utf-8">
@@ -50,22 +50,6 @@
         <header class="header-style3">
 
             <div class="navbar-default border-bottom border-color-light-white">
-
-                <!-- start top search -->
-                <!-- <div class="top-search bg-primary">
-                    <div class="container-fluid px-lg-1-6 px-xl-2-5 px-xxl-2-9">
-                        <form class="search-form" action="https://acoworkhtml.websitelayout.net/search.html" method="GET" accept-charset="utf-8">
-                            <div class="input-group">
-                                <span class="input-group-addon cursor-pointer">
-                                    <button class="search-form_submit fas fa-search text-white" type="submit"></button>
-                                </span>
-                                <input type="text" class="search-form_input form-control" name="s" autocomplete="off" placeholder="Type &amp; hit enter...">
-                                <span class="input-group-addon close-search mt-1"><i class="fas fa-times"></i></span>
-                            </div>
-                        </form>
-                    </div>
-                </div> -->
-                <!-- end top search -->
 
                 <div class="container-fluid px-lg-1-6 px-xl-2-5 px-xxl-2-9">
                     <div class="row align-items-center">
@@ -583,13 +567,13 @@
 
                                 <div class="bg-white pt-2-9 p-1-9 border-radius-10 inner-text">
                                     <p class="mb-1-6 lead">Egy Solutions enhanced our corporate campus with their sustainable landscaping and maintenance. We couldn’t be happier with the results.</p>
-                                    <h6 class="mb-0">Mohamed Mahmoud</h6>
+                                    <h6 class="mb-0">Merna Ayman</h6>
                                     <span class="small">Manager</span>
                                 </div>
 
                                 <div class="bg-white pt-2-9 p-1-9 border-radius-10 inner-text">
                                     <p class="mb-1-6 lead">Choosing Egy Solutions was a game-changer. Their proactive approach has significantly improved our facilities. We’re thrilled with the partnership.</p>
-                                    <h6 class="mb-0">Ahmed Salah</h6>
+                                    <h6 class="mb-0">Nessma Bassem</h6>
                                     <span class="small">Freelancer</span>
                                 </div>
 
@@ -671,7 +655,7 @@
                     <div class="col-sm-6 col-md-6 col-xl-3 mt-5">
                         <div>
                             <h3 class="text-white mb-3 font-weight-600 display-28">Sign up for the newsletter</h3>
-                            <form class="quform newsletter-form-icon mb-3 w-md-80 w-xl-100" action="https://acoworkhtml.websitelayout.net/quform/newsletter-two.php" method="post" enctype="multipart/form-data" onclick="">
+                            <form class="quform newsletter-form-icon mb-3 w-md-80 w-xl-100" action="" method="post" enctype="multipart/form-data" onclick="">
 
                                 <div class="quform-elements">
                                     <div class="row">
@@ -775,5 +759,4 @@
 </body>
 
 
-<!-- Mirrored from acoworkhtml.websitelayout.net/index-03.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 19 Aug 2024 10:55:10 GMT -->
 </html>
