--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-<!-- Mirrored from acoworkhtml.websitelayout.net/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 19 Aug 2024 10:55:53 GMT -->
 <head>
 
     <!-- metas -->
@@ -14,14 +11,10 @@
     <meta name="description" content="Egy-Solutions">
 
     <!-- title  -->
-    <title>Egy-Solutions</title>
+    <title>Contact Us</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="img/logos/favicon.png">
-    <link rel="apple-touch-icon" href="img/logos/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/logos/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/apple-touch-icon-114x114.png">
-
     <!-- plugins -->
     <link rel="stylesheet" href="css/plugins.css">
 
@@ -53,19 +46,7 @@
             <div class="navbar-default border-bottom border-color-light-white">
 
                 <!-- start top search -->
-                <div class="top-search bg-primary">
-                    <div class="container-fluid px-lg-1-6 px-xl-2-5 px-xxl-2-9">
-                        <form class="search-form" action="https://acoworkhtml.websitelayout.net/search.html" method="GET" accept-charset="utf-8">
-                            <div class="input-group">
-                                <span class="input-group-addon cursor-pointer">
-                                    <button class="search-form_submit fas fa-search text-white" type="submit"></button>
-                                </span>
-                                <input type="text" class="search-form_input form-control" name="s" autocomplete="off" placeholder="Type &amp; hit enter...">
-                                <span class="input-group-addon close-search mt-1"><i class="fas fa-times"></i></span>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+                
                 <!-- end top search -->
 
                 <div class="container-fluid px-lg-1-6 px-xl-2-5 px-xxl-2-9">
@@ -170,7 +151,7 @@
                             <div class="section-title mb-1-6 mb-sm-1-9">
                                 <h2 class="mb-0 text-primary">Get In Touch</h2>
                             </div>
-                            <form class="quform" action="https://acoworkhtml.websitelayout.net/quform/contact.php" method="post" enctype="multipart/form-data" onclick="">
+                            <form class="quform" action="" method="post" enctype="multipart/form-data" onclick="">
                                 <div class="quform-elements">
                                     <div class="row">
 
@@ -332,7 +313,7 @@
                     <div class="col-sm-6 col-md-6 col-xl-3 mt-5">
                         <div>
                             <h3 class="text-white mb-3 font-weight-600 display-28">Sign up for the newsletter</h3>
-                            <form class="quform newsletter-form-icon mb-3 w-md-80 w-xl-100" action="https://acoworkhtml.websitelayout.net/quform/newsletter-two.php" method="post" enctype="multipart/form-data" onclick="">
+                            <form class="quform newsletter-form-icon mb-3 w-md-80 w-xl-100" action="" method="post" enctype="multipart/form-data" onclick="">
 
                                 <div class="quform-elements">
                                     <div class="row">
@@ -400,10 +381,7 @@
 
     <!-- BUY TEMPLATE
     ================================================== -->
-    <!-- <div class="buy-theme alt-font d-none d-lg-inline-block"><a href="https://themeforest.net/item/acowork-coworking-office-space-html-template/52908890" target="_blank"><i class="fas fa-cart-plus"></i><span>Buy Template</span></a></div>
-
-    <div class="all-demo alt-font d-none d-lg-inline-block"><a href="https://themeforest.net/user/websitelayout" target="_blank"><i class="far fa-envelope"></i><span>Quick Question?</span></a></div> -->
-
+    
     <!-- SCROLL TO TOP
     ================================================== -->
     <a href="#!" class="scroll-to-top"><i class="fas fa-angle-up" aria-hidden="true"></i></a>
@@ -437,7 +415,4 @@
     <!-- all js include end -->
 
 </body>
-
-
-<!-- Mirrored from acoworkhtml.websitelayout.net/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 19 Aug 2024 10:55:53 GMT -->
 </html>
