--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                                 </div>
 
                                 <div class="bg-white pt-2-9 p-1-9 border-radius-10 inner-text">
-                                    <p class="mb-1-6 lead">Cctv camera security should be nominated for service of the year. It's incredible. If you aren't sure, always go for cctv camera security.</p>
+                                    <p class="mb-1-6 lead">Egy Solutions has been instrumental in maintaining our facilities to the highest standards. Their professional team handles everything efficiently, allowing us to focus on our core business.</p>
                                     <h6 class="mb-0">Osama</h6>
                                     <span class="small">Developer</span>
                                 </div>
