--- a/service7.html
+++ b/service7.html
@@ -107,7 +107,7 @@
                                             </ul> -->
                                         </li>
                                         <li>
-                                            <a href="index.html">Service</a>
+                                            <a href="index.html#service">Service</a>
                                             <!-- <ul>
                                                 <li><a href="workspace.html">Workspace</a></li>
                                                 <li><a href="workspace-details.html">Workspace Details</a></li>
