--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                             </ul> -->
                                         </li>
                                         <li>
-                                            <a href="#about">About Us</a>
+                                            <a href="about.html">About Us</a>
                                             <!-- <ul>
                                                 <li><a href="about.html">About Us</a></li>
                                                 <li><a href="services.html">Services</a></li>
@@ -134,7 +134,7 @@
                                 <div class="col-md-12 col-lg-11 col-xl-9">
                                     <span class="text-primary text-uppercase small letter-spacing-4 d-block mb-4 font-weight-700">Welcome to Egy Solutions</span>
                                     <h1 class="text-white font-weight-700 mb-1-9 text-uppercase">Expert Solutions for Daily Challenges</h1>
-                                    <a href="#about" class="butn"><span>Learn More</span></a>                      
+                                    <a href="about.html" class="butn"><span>Learn More</span></a>                      
                                 </div>
                             </div>
                         </div>
@@ -148,7 +148,7 @@
                                 <div class="col-md-12 col-lg-11 col-xl-9">
                                     <span class="text-primary text-uppercase small letter-spacing-4 d-block mb-4 font-weight-700">Welcome to Egy Solutions</span>
                                     <h1 class="text-white mb-1-9 text-uppercase">Innovative Expertise in Smart Applications</h1>
-                                    <a href="#about" class="butn"><span>Learn More</span></a>                      
+                                    <a href="about.html" class="butn"><span>Learn More</span></a>                      
                                 </div>
                             </div>
                         </div>
@@ -162,7 +162,7 @@
                                 <div class="col-md-12 col-lg-11 col-xl-9">
                                     <span class="text-primary text-uppercase small letter-spacing-4 d-block mb-4 font-weight-700">Welcome to Egy Solutions</span>
                                     <h1 class="text-white mb-1-9 text-uppercase">Specialists in Modern Problem-Solving</h1>
-                                    <a href="#about" class="butn"><span>Learn More</span></a>                      
+                                    <a href="about.html" class="butn"><span>Learn More</span></a>                      
                                 </div>
                             </div>
                         </div>
