--- a/service7.html
+++ b/service7.html
@@ -92,7 +92,7 @@
                                             </ul> -->
                                         </li>
                                         <li>
-                                            <a href="#about">About Us</a>
+                                            <a href="about.html">About Us</a>
                                             <!-- <ul>
                                                 <li><a href="about.html">About Us</a></li>
                                                 <li><a href="services.html">Services</a></li>
