--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <!-- favicon -->
     <link rel="shortcut icon" href="img/logos/favicon.png">
-    <link rel="apple-touch-icon" href="img/logos/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/logos/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" href="img/logos/favicon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/logos/favicon.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/favicon.png">
 
     <!-- plugins -->
     <link rel="stylesheet" href="css/plugins.css">
@@ -180,7 +180,7 @@
                     <div class="col-lg-6 mt-1-9">
                         <div class="text-end position-relative">
                             <div class="about-img position-relative z-index-9 w-85 ms-auto overflow-hidden">
-                                <img src="img/content/about-05.jpg" alt="...">
+                                <img src="img/Stack.jfif" alt="...">
                             </div>
                             <div class="exp-box z-index-9">
                                 <span class="display-5 display-sm-2 text-white font-weight-500">4</span>
