--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,9 @@
 
     <!-- favicon -->
     <link rel="shortcut icon" href="img/logos/favicon.png">
+    <link rel="apple-touch-icon" href="img/logos/favicon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/logos/favicon.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/favicon.png">
     <!-- plugins -->
     <link rel="stylesheet" href="css/plugins.css">
 
