--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                 <li>The corporate sector includes the government sector and the business sector</li>
                                 <li>The individual sector through the “Easy Serve” application. </li>
                             </ul>
-                            <!-- <a href="about.html" class="butn secondary md">Read More</a> -->
+                            <a href="about.html" class="butn secondary md">Read More</a>
                         </div>
                     </div>
                 </div>
