--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <div class="col-lg-6 mt-1-9">
                         <div class="text-end position-relative">
                             <div class="about-img position-relative z-index-9 w-85 ms-auto overflow-hidden">
-                                <img src="img/Stack.jfif" alt="...">
+                                <img src="img/about-01.jpg" alt="...">
                             </div>
                             <div class="exp-box z-index-9">
                                 <span class="display-5 display-sm-2 text-white font-weight-500">4</span>
