--- a/img/download.htm
+++ b/img/download.htm
@@ -125,7 +125,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
 								<li id="menu-item-143" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-9 current_page_item menu-item-143"><a href="https://egy.solutions/" aria-current="page">Home</a></li>
 <li id="menu-item-144" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-144"><a href="https://egy.solutions/contact-us/">Contact Us</a></li>
-<li id="menu-item-185-ar" class="lang-item lang-item-4 lang-item-ar lang-item-first menu-item menu-item-type-custom menu-item-object-custom menu-item-185-ar"><a href="https://egy.solutions/ar/home-%d8%a7%d9%84%d8%b9%d8%b1%d8%a8%d9%8a%d8%a9/" hreflang="ar" lang="ar">العربية</a></li>
+<li id="menu-item-185-ar" class="lang-item lang-item-4 lang-item-ar lang-item-first menu-item menu-item-type-custom menu-item-object-custom menu-item-185-ar"><a href="https://egy.solutions/ar/home-%d8%a7%d9%84%d8%b9%d8%b1%d8%a8%d9%8a%d8%a9/" hreflang="ar" lang="ar">الArabicة</a></li>
 
 								</ul>
 
@@ -176,7 +176,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 						<ul class="modal-menu reset-list-style">
 							<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-9 current_page_item menu-item-143"><div class="ancestor-wrapper"><a href="https://egy.solutions/" aria-current="page">Home</a></div><!-- .ancestor-wrapper --></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-144"><div class="ancestor-wrapper"><a href="https://egy.solutions/contact-us/">Contact Us</a></div><!-- .ancestor-wrapper --></li>
-<li class="lang-item lang-item-4 lang-item-ar lang-item-first menu-item menu-item-type-custom menu-item-object-custom menu-item-185-ar"><div class="ancestor-wrapper"><a href="https://egy.solutions/ar/home-%d8%a7%d9%84%d8%b9%d8%b1%d8%a8%d9%8a%d8%a9/" hreflang="ar" lang="ar">العربية</a></div><!-- .ancestor-wrapper --></li>
+<li class="lang-item lang-item-4 lang-item-ar lang-item-first menu-item menu-item-type-custom menu-item-object-custom menu-item-185-ar"><div class="ancestor-wrapper"><a href="https://egy.solutions/ar/home-%d8%a7%d9%84%d8%b9%d8%b1%d8%a8%d9%8a%d8%a9/" hreflang="ar" lang="ar">الArabicة</a></div><!-- .ancestor-wrapper --></li>
 						</ul>
 
 					</nav>
@@ -188,7 +188,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
 						<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-9 current_page_item menu-item-143"><div class="ancestor-wrapper"><a href="https://egy.solutions/" aria-current="page">Home</a></div><!-- .ancestor-wrapper --></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-144"><div class="ancestor-wrapper"><a href="https://egy.solutions/contact-us/">Contact Us</a></div><!-- .ancestor-wrapper --></li>
-<li class="lang-item lang-item-4 lang-item-ar lang-item-first menu-item menu-item-type-custom menu-item-object-custom menu-item-185-ar"><div class="ancestor-wrapper"><a href="https://egy.solutions/ar/home-%d8%a7%d9%84%d8%b9%d8%b1%d8%a8%d9%8a%d8%a9/" hreflang="ar" lang="ar">العربية</a></div><!-- .ancestor-wrapper --></li>
+<li class="lang-item lang-item-4 lang-item-ar lang-item-first menu-item menu-item-type-custom menu-item-object-custom menu-item-185-ar"><div class="ancestor-wrapper"><a href="https://egy.solutions/ar/home-%d8%a7%d9%84%d8%b9%d8%b1%d8%a8%d9%8a%d8%a9/" hreflang="ar" lang="ar">الArabicة</a></div><!-- .ancestor-wrapper --></li>
 
 						</ul>
 
