--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     <div class="row align-items-center">
                         <div class="col-12 col-lg-12">
                             <div class="menu_area alt-font">
-                                <nav class="navbar navbar-expand-lg navbar-light p-0">
+                                <nav class="navbar navbox navbar-expand-lg navbar-light p-0">
                                     <div class="navbar-header navbar-header-custom">
                                         <!-- start logo -->
                                         <a href="index.html" class="navbar-brand logochange"><img id="logo" src="img/logo.png" alt="logo"></a>
@@ -63,7 +63,7 @@
                                     <div class="navbar-toggler bg-primary"></div>
 
                                     <!-- menu area -->
-                                    <ul class="navbar-nav ms-auto align-items-center" id="nav" style="display: none;">
+                                    <ul class="navbar-nav  align-items-center" id="nav" style="display: none;">
                                         <li>
                                             <a data-key="nav_home" href="index.html"></a>
                                             
@@ -79,11 +79,11 @@
                                         <li>
                                             <a data-key="nav_contact" href="contact.html"></a>
                                         </li>
-                                        <li class="language-switcher">
-                                            <button class="btn btn-primary" id="english-btn">English</button>
-                                            <button class="btn btn-outline-primary border-0 font-weight-900 " id="arabic-btn">Arabic</button>
-                                        </li>
                                     </ul>
+                                    <div class="language-switcher">
+                                        <button class="btn btn-primary" id="english-btn">English</button>
+                                        <button class="btn btn-outline-primary border-0 font-weight-900 " id="arabic-btn">Arabic</button>
+                                    </div>
                                     <!-- end menu area -->
 
                                     <!-- start attribute navigation -->
