--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                     <div class="row align-items-center">
                         <div class="col-12 col-lg-12">
                             <div class="menu_area alt-font">
-                                <nav class="navbar navbar-expand-lg navbar-light p-0">
+                                <nav class="navbar navbox navbar-expand-lg navbar-light p-0">
                                     <div class="navbar-header navbar-header-custom">
                                         <!-- start logo -->
                                         <a href="index.html" class="navbar-brand logochange"><img id="logo" src="img/logo.png" alt="logo"></a>
@@ -62,7 +62,7 @@
                                     <div class="navbar-toggler bg-primary"></div>
 
                                     <!-- menu area -->
-                                    <ul class="navbar-nav ms-auto align-items-center" id="nav" style="display: none;">
+                                    <ul class="navbar-nav  align-items-center" id="nav" style="display: none;">
                                         <li>
                                             <a data-key="nav_home" href="index.html"></a>
                                             
@@ -78,11 +78,11 @@
                                         <li>
                                             <a data-key="nav_contact" href="contact.html"></a>
                                         </li>
-                                        <li class="language-switcher">
-                                            <button class="btn btn-primary" id="english-btn">English</button>
-                                            <button class="btn btn-outline-primary border-0 font-weight-900 " id="arabic-btn">Arabic</button>
-                                        </li>
                                     </ul>
+                                    <div class="language-switcher">
+                                        <button class="btn btn-primary" id="english-btn">English</button>
+                                        <button class="btn btn-outline-primary border-0 font-weight-900 " id="arabic-btn">Arabic</button>
+                                    </div>
                                     <!-- end menu area -->
 
                                     <!-- start attribute navigation -->
@@ -244,14 +244,14 @@
                         <div class="col-md-6 col-xxl-4 mt-1-9">
                             <div class="contact-info border-xxl-end border-color-light-white h-100 px-md-3">
                                 <h5 data-key="Opening_Hours" class="mb-3"><i class="ti-alarm-clock me-2"></i> Opening Hours</h5>
-                                <span data-key="Opening_Hours1" class="text-white d-block">Sunday - Thursday : 09:00 AM - 10:00 PM</span>
+                                <span data-key="Opening_Hours1" class="text-white d-block">Sunday - Thursday : 09:00 AM - 05:00 PM</span>
                                 <span data-key="Opening_Hours2" class="text-white d-block">Saturday : 10:00 AM - 03:00 PM</span>
                             </div>
                         </div>
                         <div class="col-md-6 col-xxl-4 mt-1-9">
                             <div class="contact-info border-md-end border-color-light-white h-100 px-md-3">
                                 <h5 data-key="Contact_Info" class="mb-3"><i class="ti-mobile me-2"></i> Contact Info</h5>
-                                <span class="text-white d-block">(+20) 232 780 07</span>
+                                <span class="text-white d-block service-card" dir="ltr">(+20) 232 780 07</span>
                                 
                             </div>
                         </div>
